--- a/Explanation/readme
+++ b/Explanation/readme
@@ -1,82 +1,82 @@
-##Design patterns
+## Design patterns
 * Easy to maintains
 * template 
 
 
-#Behavioural(Behaviour/interaction of objects)
-*Chain of Responsibility
+# Behavioural(Behaviour/interaction of objects)
+* Chain of Responsibility
      : A way of passing a request between a chain of objects
      : Loan aproval process 
 	 : Exeption handling 
 	 : Logger pattern 
-*Iterator(#) 
+* Iterator(#) 
      : Sequentially access the elements of a collection
-*State
+* State
      : Alter an object's behaviour when its state chnages 
-*Strategy
+* Strategy
      : Encapsulates an algorithim inside a class 
 	 : Comparator interface 
 	 : Sorting 
-*Observer(#) 
+* Observer(#) 
      : A way of notifying a change to a number of classes 
 	 : Online bidding 
 	 : Sachin 
-*Visitor 
+* Visitor 
      : Defines a new operation to a class without change. 
-*Template Method 
+* Template Method 
      : Defer the exact steps of an algorithim to  subclass.
-*Command 
+* Command 
      : Encapsulate a command request as an object 
 	 : Thread using Runnable interface 
-*Memento(#) 
+* Memento(#) 
      : Undo/Redo functionality 
 	 : Capture and restore an object's internal state 
 	 : Savepoints in DB
-*Mediator
+* Mediator
      : Defines simplified communication between classes. 
 	 : ESB 
-#Creational 
-*Prototype
+# Creational 
+* Prototype
      : Fully initialized instance to be copied/cloned.
      : Object setup is complex/resource intensive and we can not afford to create every time.
 	 : Cheese game - initial layout.
 	 : Initial setup is fully initialized and will be cloned later. 
 	 
-*Builder
+* Builder
      : We have complex objects to create
      : Separate object construction from its represenation
      : Hide complex internal structure 
 	 : 
 		
-*Singleton(#) 
+* Singleton(#) 
       : **
-*Factory: (Virtual Constructor)
+* Factory: (Virtual Constructor)
  :"Define an interface/class for creating an object but let the subclasses decide which class to instatiate"
- **Simple,
- **Method
+ ** Simple,
+ ** Method
      : Define an interface for creating an object but let subclasses decide whivh object t instatiate. 
 	 : Method that creates objects 
 	 : Polymorphism
- **Abstract 
+ ** Abstract 
      : Familiy of objects
  
-*Object pool pettern
+* Object pool pettern
 
-#.Structural (Composation of classes)
-*Proxy
+# Structural (Composation of classes)
+* Proxy
      : Object representing another object 
      : Credit card is a proxy of a bank account
-*Decorator
+* Decorator
       : Add responsibility to an object dynamically 
       : LineNumberInputStream(BufferedInputStream(FileInputeStream)))
 	  : Add discount to an order
 	  : Add toppings to a Pizza
-*Facade
+* Facade
     : Single class that represent the entire subsystem.
     : Event manager 
 	: Represent several steps into one step 
 	: Reduce network calls
-*Adapter (#) 
+* Adapter (#) 
       : Match interfaces of different classes 
-*Flyweight
+* Flyweight
       : A fine grained instance used for efficient sharing.
